# agentic-ai-toolkit

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  models.yaml
configs/experiments/: ablation_memory.yaml  ablation_planner.yaml  model_comparison.yaml  multi_agent.yaml
dashboard/: README.md  docker-compose.yml
dashboard/backend/: Dockerfile  requirements.txt
dashboard/backend/app/: __init__.py  config.py  main.py
dashboard/frontend/: index.html  nginx.conf  package.json
dashboard/frontend/src/: App.tsx
eval/: __init__.py  metrics.py
examples/: 01_simple_agent.py  02_memory_systems.py  03_multi_agent.py  04_evaluation.py  05_security_policy_demo.py  06_protocols_demo.py  complete_integration_example.py  paper_validation.py
examples/use-cases/: README.md  coding_assistant_evaluation.py  cost_optimization_analysis.py  enterprise_agent_evaluation.py  multi_agent_evaluation.py  ollama_helper.py  research_comparison.py  safety_compliance_check.py
experiments/: __init__.py  cnsr_multitask.py  exp_context_noise.py  exp_obs_fidelity.py  exp_progress_mono.py  judge_bias.py
scripts/: generate_latex.py
src/agentic_toolkit/: __init__.py
src/agentic_toolkit/agents/: __init__.py  conflict_resolver.py  coordinator.py  multi_agent.py  react_agent.py
src/agentic_toolkit/benchmarks/: __init__.py  agentbench_adapter.py  base_adapter.py  hotpotqa_adapter.py  swebench_adapter.py
src/agentic_toolkit/context/: __init__.py
tests/: conftest.py  test_equation_consistency.py
tests/core/: test_control_loop.py  test_cost.py  test_seeding.py
tests/evaluation/: test_autonomy_validator.py  test_cnsr_benchmark.py  test_cost_model.py  test_cost_model_standalone.py  test_goal_drift.py  test_incident_tracker.py  test_long_horizon.py  test_metrics.py  test_pathology_benchmarks.py  test_rolling_metrics.py
tests/human_oversight/: __init__.py  test_approval_flow.py  test_audit.py  test_escalation.py
tests/integration/: __init__.py  test_long_horizon_evaluation.py
tests/learning/: test_deployment_loop.py
tests/monitoring/: test_stability_monitor.py
tests/protocols/: test_capability_auth.py  test_replay_protection.py
tests/security/: test_threat_validator.py
tests/skills/: test_skill_registry.py
tests/tools/: test_sandbox.py  test_security_enforcement.py
(+107 files in other folders)
